--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "private": true,
   "license": "Apache-2.0",
+  "homepage": "https://houndsarisen.xyz",
   "dependencies": {
     "@babel/runtime": "^7.15.5",
     "@civic/solana-gateway-react": "^0.10.0",
@@ -22,6 +23,7 @@
     "@solana/wallet-adapter-solflare": "^0.6.18",
     "@solana/wallet-adapter-sollet": "^0.11.12",
     "@solana/web3.js": "^1.58.0",
+    "gh-pages": "^4.0.0",
     "mime": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -38,6 +40,8 @@
     "lint": "prettier -c 'src/**/*.{ts,tsx}' && npm run lint:eslint",
     "lint:eslint": "eslint 'src/**/*.{ts,tsx}'",
     "lint:fix": "prettier --write 'src/**/*.{ts,tsx}' && eslint --fix 'src/**/*.{ts,tsx}'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
